--- a/kubernetes/metrics/02-deployment.yml
+++ b/kubernetes/metrics/02-deployment.yml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: prometheus
-          image: prom/prometheus:latest
+          image: prom/prometheus:v3.3.1
           ports:
             - name: web
               containerPort: 9090
@@ -43,7 +43,7 @@ spec:
     spec:
       containers:
         - name: grafana
-          image: grafana/grafana:latest
+          image: grafana/grafana:11.6.1
           ports:
             - name: web
               containerPort: 3000
@@ -52,8 +52,6 @@ spec:
               value: "true"
             - name: GF_AUTH_ANONYMOUS_ORG_ROLE
               value: "Viewer"
-            - name: GF_AUTH_DISABLE_LOGIN_FORM
-              value: "true"
             - name: GF_USERS_ALLOW_SIGN_UP
               value: "false"
             - name: GF_SECURITY_ADMIN_USER
