--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,6 +65,7 @@ jobs:
           kubectl apply -k ${{ env.DEPLOY_PATH }}/kubernetes/volleyballnacht
           kubectl apply -k ${{ env.DEPLOY_PATH }}/kubernetes/star-wars-bild-countdown
           kubectl apply -k ${{ env.DEPLOY_PATH }}/kubernetes/metrics
+          kubectl apply -k ${{ env.DEPLOY_PATH }}/kubernetes/jetski
 
           echo "Cleaning up"
           rm -rf ${{ env.DEPLOY_PATH }}
