--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,8 @@ env:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment: calfur-001
+    concurrency: calfur-001
 
     steps:
     - name: Checkout Code
