--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,6 +73,7 @@ jobs:
           kubectl apply -k ${{ env.DEPLOY_PATH }}/kubernetes/metrics
           kubectl apply -k ${{ env.DEPLOY_PATH }}/kubernetes/jetski
           kubectl apply -k ${{ env.DEPLOY_PATH }}/kubernetes/homepage
+          kubectl apply -k ${{ env.DEPLOY_PATH }}/kubernetes/party-battle
 
           echo "Cleaning up"
           rm -rf ${{ env.DEPLOY_PATH }}
