Change .com to .ch

--- a/kubernetes/party-battle/03-ingress.yml
+++ b/kubernetes/party-battle/03-ingress.yml
@@ -7,7 +7,7 @@ spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`party-battle.thirty-degrees.com`)
+    - match: Host(`party-battle.thirty-degrees.ch`)
       kind: Rule
       services:
         - name: party-battle-frontend
