--- a/kubernetes/party-battle/02-deployment.yml
+++ b/kubernetes/party-battle/02-deployment.yml
@@ -22,3 +22,5 @@ spec:
           ports:
             - name: web
               containerPort: 80
+      imagePullSecrets:
+        - name: ghcr-secret
