--- a/kubernetes/party-battle/backend/catchall/03-ingress.yml
+++ b/kubernetes/party-battle/backend/catchall/03-ingress.yml
@@ -2,15 +2,18 @@ apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   namespace: default
-  name: party-battle
+  name: party-battle-backend-catchall
 spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`party-battle.thirty-degrees.ch`)
+    - match: Host(`party-battle.thirty-degrees.ch`) && PathPrefix(`/api`)
       kind: Rule
+      priority: 1
       services:
-        - name: party-battle-frontend
+        - name: party-battle-backend-catchall
           port: 80
   tls:
     certResolver: myresolver
+
+
