--- a/kubernetes/party-battle/backend/catchall/03-ingress.yml
+++ b/kubernetes/party-battle/backend/catchall/03-ingress.yml
@@ -10,6 +10,8 @@ spec:
     - match: Host(`party-battle.thirty-degrees.ch`) && PathPrefix(`/api`)
       kind: Rule
       priority: 1
+      middlewares:
+        - name: party-battle-backend-catchall-400
       services:
         - name: party-battle-backend-catchall
           port: 80
