Change frontend ingress priority

--- a/kubernetes/party-battle/frontend/03-ingress.yml
+++ b/kubernetes/party-battle/frontend/03-ingress.yml
@@ -9,6 +9,7 @@ spec:
   routes:
     - match: Host(`party-battle.thirty-degrees.ch`)
       kind: Rule
+      priority: 0
       services:
         - name: party-battle-frontend
           port: 80
