Exclude api routes from frontend ingress

--- a/kubernetes/party-battle/frontend/03-ingress.yml
+++ b/kubernetes/party-battle/frontend/03-ingress.yml
@@ -7,7 +7,7 @@ spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`party-battle.thirty-degrees.ch`)
+    - match: Host(`party-battle.thirty-degrees.ch`) && !(PathPrefix(`/api`)
       kind: Rule
       priority: 0
       services:
