--- a/kubernetes/party-battle/frontend/03-ingress.yml
+++ b/kubernetes/party-battle/frontend/03-ingress.yml
@@ -2,12 +2,12 @@ apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   namespace: default
-  name: party-battle
+  name: ingressroute-party-battle
 spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`party-battle.thirty-degrees.ch`) && !(PathPrefix(`/api`)
+    - match: Host(`party-battle.thirty-degrees.ch`)
       kind: Rule
       priority: 0
       services:
