--- a/kubernetes/party-battle/backend/catchall/04-middleware.yml
+++ b/kubernetes/party-battle/backend/catchall/04-middleware.yml
@@ -6,4 +6,4 @@ metadata:
 spec:
   replacePathRegex:
     regex: ^/api/?.*
-    replacement: /status/400?body=Invalid%20API%20version
+    replacement: /response-headers?status=400&message=Invalid+api+version
