Move labels into files

--- a/kubernetes/party-battle/backend/catchall/04-middleware.yml
+++ b/kubernetes/party-battle/backend/catchall/04-middleware.yml
@@ -3,6 +3,8 @@ kind: Middleware
 metadata:
   namespace: default
   name: party-battle-backend-catchall-400
+  labels:
+    app.kubernetes.io/part-of: party-battle
 spec:
   replacePathRegex:
     regex: ^/api/?.*
