--- a/kubernetes/party-battle/backend/versions/v1.3.2/02-deployment.yml
+++ b/kubernetes/party-battle/backend/versions/v1.3.2/02-deployment.yml
@@ -11,10 +11,12 @@ spec:
   selector:
     matchLabels:
       app: party-battle-backend-v1-3-2
+      app.kubernetes.io/part-of: party-battle
   template:
     metadata:
       labels:
         app: party-battle-backend-v1-3-2
+        app.kubernetes.io/part-of: party-battle
     spec:
       containers:
         - name: party-battle-backend
