--- a/kubernetes/party-battle/backend/catchall/01-service.yml
+++ b/kubernetes/party-battle/backend/catchall/01-service.yml
@@ -12,5 +12,6 @@ spec:
       targetPort: 8080
   selector:
     app: party-battle-backend-catchall
+    app.kubernetes.io/part-of: party-battle
 
 
