--- a/kubernetes/party-battle/frontend/03-ingress.yml
+++ b/kubernetes/party-battle/frontend/03-ingress.yml
@@ -3,6 +3,8 @@ kind: IngressRoute
 metadata:
   namespace: default
   name: ingressroute-party-battle
+  labels:
+    app.kubernetes.io/part-of: party-battle
 spec:
   entryPoints:
     - websecure
