--- a/kubernetes/party-battle/backend/versions/v1.3.7/03-ingress.yml
+++ b/kubernetes/party-battle/backend/versions/v1.3.7/03-ingress.yml
@@ -3,6 +3,8 @@ kind: IngressRoute
 metadata:
   namespace: default
   name: ingressroute-party-battle-backend-v1-3-7
+  labels:
+    app.kubernetes.io/part-of: party-battle
 spec:
   entryPoints:
     - websecure
