--- a/kubernetes/party-battle/frontend/kustomization.yaml
+++ b/kubernetes/party-battle/frontend/kustomization.yaml
@@ -1,6 +1,6 @@
+commonLabels:
+  app.kubernetes.io/part-of: party-battle
 resources:
   - 01-service.yml
   - 02-deployment.yml
   - 03-ingress.yml
-
-
