--- a/kubernetes/party-battle/backend/catchall/kustomization.yaml
+++ b/kubernetes/party-battle/backend/catchall/kustomization.yaml
@@ -1,7 +1,7 @@
+commonLabels:
+  app.kubernetes.io/part-of: party-battle
 resources:
   - 01-service.yml
   - 02-deployment.yml
   - 03-ingress.yml
   - 04-middleware.yml
-
-
