--- a/kubernetes/party-battle/backend/catchall/01-service.yml
+++ b/kubernetes/party-battle/backend/catchall/01-service.yml
@@ -7,10 +7,8 @@ metadata:
 spec:
   ports:
     - protocol: TCP
-      name: web
+      name: api
       port: 80
-      targetPort: 8080
+      targetPort: 80
   selector:
     app: party-battle-backend-catchall
-
-
