--- a/kubernetes/thirty-degrees-homepage/02-deployment.yml
+++ b/kubernetes/thirty-degrees-homepage/02-deployment.yml
@@ -22,3 +22,5 @@ spec:
           ports:
             - name: web
               containerPort: 3000 
+      imagePullSecrets:
+        - name: ghcr-secret
