--- a/kubernetes/watermark-webapp/03-ingress.yml
+++ b/kubernetes/watermark-webapp/03-ingress.yml
@@ -12,5 +12,29 @@ spec:
       services:
         - name: watermark-webapp
           port: 80
+    - match: Host(`www.onlinewatermarks.com`)
+      kind: Rule
+      middlewares:
+        - name: redirect-www-to-root
+      services:
+        - name: watermark-webapp
+          port: 80
   tls:
-    certResolver: myresolver 
+    certResolver: myresolver
+---
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
+metadata:
+  namespace: default
+  name: ingressroute-watermark-webapp-http
+spec:
+  entryPoints:
+    - web
+  routes:
+    - match: Host(`onlinewatermarks.com`) || Host(`www.onlinewatermarks.com`)
+      kind: Rule
+      middlewares:
+        - name: redirect-to-https
+      services:
+        - name: watermark-webapp
+          port: 80 
