--- a/kubernetes/watermark-webapp/kustomization.yaml
+++ b/kubernetes/watermark-webapp/kustomization.yaml
@@ -1,6 +1,7 @@
 commonLabels:
   app.kubernetes.io/part-of: watermark-webapp
 resources:
+  - 00-middlewares.yml
   - 01-service.yml
   - 02-deployment.yml
   - 03-ingress.yml 
