--- a/kubernetes/watermark-webapp/03-ingress.yml
+++ b/kubernetes/watermark-webapp/03-ingress.yml
@@ -5,10 +5,13 @@ metadata:
   name: ingressroute-watermark-webapp
 spec:
   entryPoints:
+    - web
     - websecure
   routes:
     - match: Host(`onlinewatermarks.com`)
       kind: Rule
+      middlewares:
+        - name: redirect-to-https
       services:
         - name: watermark-webapp
           port: 80
@@ -21,20 +24,7 @@ spec:
           port: 80
   tls:
     certResolver: myresolver
----
-apiVersion: traefik.io/v1alpha1
-kind: IngressRoute
-metadata:
-  namespace: default
-  name: ingressroute-watermark-webapp-http
-spec:
-  entryPoints:
-    - web
-  routes:
-    - match: Host(`onlinewatermarks.com`) || Host(`www.onlinewatermarks.com`)
-      kind: Rule
-      middlewares:
-        - name: redirect-to-https
-      services:
-        - name: watermark-webapp
-          port: 80 
+    domains:
+      - main: onlinewatermarks.com
+        sans:
+          - www.onlinewatermarks.com
