--- a/kubernetes/traefik/02-service.yml
+++ b/kubernetes/traefik/02-service.yml
@@ -8,6 +8,10 @@ spec:
   type: LoadBalancer
   ports:
     - protocol: TCP
+      name: web
+      port: 80
+      targetPort: 8000
+    - protocol: TCP
       name: websecure
       port: 443
       targetPort: 4443
