--- a/kubernetes/watermark-webapp/03-ingress.yml
+++ b/kubernetes/watermark-webapp/03-ingress.yml
@@ -5,13 +5,10 @@ metadata:
   name: ingressroute-watermark-webapp
 spec:
   entryPoints:
-    - web
     - websecure
   routes:
     - match: Host(`onlinewatermarks.com`)
       kind: Rule
-      middlewares:
-        - name: redirect-to-https
       services:
         - name: watermark-webapp
           port: 80
@@ -28,3 +25,21 @@ spec:
       - main: onlinewatermarks.com
         sans:
           - www.onlinewatermarks.com
+---
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
+metadata:
+  namespace: default
+  name: ingressroute-watermark-webapp-http
+spec:
+  entryPoints:
+    - web
+  routes:
+    - match: Host(`onlinewatermarks.com`)
+      kind: Rule
+      middlewares:
+        - name: redirect-to-https
+    - match: Host(`www.onlinewatermarks.com`)
+      kind: Rule
+      middlewares:
+        - name: redirect-www-to-root
