--- a/kubernetes/traefik/03-deployment.yml
+++ b/kubernetes/traefik/03-deployment.yml
@@ -23,8 +23,8 @@ spec:
           args:
             - --api.insecure
             - --accesslog
-            - --entryPoints.web.Address=:8000
-            - --entryPoints.websecure.Address=:4443
+            - --entrypoints.web.Address=:8000
+            - --entrypoints.websecure.Address=:4443
             - --providers.kubernetescrd
             - --certificatesresolvers.myresolver.acme.tlschallenge
             - --certificatesresolvers.myresolver.acme.email=$(TRAEFIK_ACME_EMAIL)
