feat: add hsts-header to onlinewatermarks.com

--- a/kubernetes/watermark-webapp/03-ingress.yml
+++ b/kubernetes/watermark-webapp/03-ingress.yml
@@ -9,6 +9,8 @@ spec:
   routes:
     - match: Host(`onlinewatermarks.com`)
       kind: Rule
+      middlewares:
+        - name: hsts-header
       services:
         - name: watermark-webapp
           port: 80
