--- a/kubernetes/watermark-webapp/00-middlewares.yml
+++ b/kubernetes/watermark-webapp/00-middlewares.yml
@@ -18,3 +18,13 @@ spec:
     regex: ^https?://www\.onlinewatermarks\.com/(.*)
     replacement: https://onlinewatermarks.com/$1
     permanent: true
+---
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  namespace: default
+  name: hsts-header
+spec:
+  headers:
+    customResponseHeaders:
+      Strict-Transport-Security: "max-age=31536000; includeSubDomains; preload"
